--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "homepage": "https://danielfrancisco.github.io/danielc/",
+  "homepage": "https://danielfrancisco.github.io/",
   "name": "danielc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@react-md/icon": "^5.1.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
@@ -14,10 +15,12 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
