--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://danielfrancisco.github.io/",
+  "homepage": "https://danielfrancisco.github.io/danielcampoverde",
   "name": "danielc",
   "version": "0.1.0",
   "private": true,
@@ -20,7 +20,6 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
