--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "save-dev": "^0.0.1-security",
+    "universal-cookie": "^7.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
